<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.digitale.wowpaper.MainActivity$CommentaryDetailFragment">

    <!-- Event Line -->
    <TextView android:id="@+id/labelEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonBar"
        android:layout_marginTop="20dp"
        android:text="@string/commentaryEvent"
        android:textStyle="bold" />

    <TextView android:id="@+id/cEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/labelEvent"
        android:layout_alignBaseline="@+id/labelEvent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:text="event text" />
    <!-- Event Heading Line -->
    <TextView android:id="@+id/labelHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelEvent"
        android:layout_marginTop="20dp"
        android:text="@string/commentaryHeading"
        android:textStyle="bold" />

    <TextView android:id="@+id/cHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/labelHeading"
        android:layout_alignBaseline="@+id/labelHeading"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:text="heading text" />

    <!-- Event Description -->
    <TextView android:id="@+id/labelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelHeading"
        android:layout_marginTop="20dp"
        android:text="@string/commentaryDescription"
        android:textStyle="bold" />
    <TextView android:id="@+id/cDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/labelDescription"
        android:layout_alignBaseline="@+id/labelDescription"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:text="description text" />
    <!-- Event Time -->
    <TextView android:id="@+id/labelTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelDescription"
        android:layout_marginTop="20dp"
        android:text="@string/commentaryTime"
        android:textStyle="bold" />

    <TextView android:id="@+id/cTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/labelTime"
        android:layout_alignBaseline="@+id/labelTime"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:text="time text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:id="@+id/buttonBar">

        <Button
            android:id="@+id/buttonPrevious"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/commentaryPrev" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/commentaryNext" />


    </LinearLayout>

</RelativeLayout>
