
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="?attr/actionBarSize"
    tools:context="com.digitale.wowpaper.MainActivity$CommentaryDetailFragment">


    <ScrollView android:id="@+id/parentScrollView"
        android:layout_width="fill_parent" android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:fillViewport="false"
        android:layout_alignParentTop="true">
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false"
            android:id="@+id/RLscrollcontainer"
            android:foregroundGravity="fill_vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:id="@+id/llRegionPicker"
                android:layout_weight="4"
                android:weightSum="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/region_spinner_instructions"
                    android:id="@+id/labelRegionSelect"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:id="@+id/llSpinnerServer"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="0dp"
                    android:gravity="bottom"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1">
                    <Spinner
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerRegion"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_below="@+id/labelRegionSelect"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_weight="1" />
                    <TextView
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/labelSelectedServer"
                        android:layout_weight="1"
                        android:gravity="center_vertical" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/server_list_instructions"
                    android:id="@+id/labelServerSelect"
                    android:layout_below="@+id/spinnerRegion"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ListView
                    android:id="@+id/realmListView"
                    android:layout_width="fill_parent"
                    android:layout_height="280dip"
                    android:clickable="true"
                    android:overScrollMode="ifContentScrolls"
                    android:layout_below="@+id/labelServerSelect"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1.89" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:id="@+id/llSearchBar"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="0dp"
                android:gravity="bottom"
                android:layout_alignParentBottom="true"
                android:layout_weight="1">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editSearchText"
                    android:text="Ameelia"
                    android:layout_below="@+id/realmListView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:inputType="text"
                    android:hint="Character Name"
                    android:layout_weight="6" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonSearchText"
                    android:id="@+id/buttonSearch"
                    android:layout_below="@+id/realmListView"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
